--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>//</title>
+    <title>cd ~</title>
     <meta name="description" content="Felix Maier">
     <meta name="author" content="Felix Maier">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -38,7 +38,7 @@
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
         • <a href="https://github.com/maierfelix/htmlparse">A fast HTML parser</a><br/>
         <br/>
-        Games:
+        Game related:
         <br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter (much boom-boom)</a><br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
