--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNG's</a><br/>
+        • <a href="https://github.com/maierfelix/txt2png">Storing ascii inside png's</a><br/>
         • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
         <br/>
