--- a/index.html
+++ b/index.html
@@ -70,5 +70,13 @@
       </center>
     </div>
 
+    <div>
+      <br/>
+      <center id="updated" style="color:#717171;"></center>
+      <br/>
+    </div>
+
+    <script type="text/javascript" src="js/main.js" async></script>
+
   </body>
 </html>
