--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br/>
         • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a><br/>
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
-        • <a href="https://github.com/maierfelix/htmlparse">A fast HTML parser</a><br/>
+        • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a><br/>
         <br/>
         Game related:
         <br/>
