--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <br/>
       <br/>
       <center>
-        I'm 20 years old from Stuttgart, Germany.<br/>If you have any questions feel free to write me a <a href="mailto:xilefmai@gmail.com">mail</a> <l style="color:#efe700;">:-)</l>
+        I'm 20 years old and currently live in Tübingen, Germany.<br/>
+        If you have any questions feel free to write me a <a href="mailto:xilefmai@gmail.com">mail</a> <l style="color:#efe700;">:-)</l>
       </center>
     </div>
 
@@ -36,11 +37,15 @@
         <br/>
         • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a><br/>
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
+        • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler</a><br/>
         • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a><br/>
         <br/>
-        Game related:
+        Games:
         <br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter (much boom-boom)</a><br/>
+        <br/>
+        Pokemon related:
+        <br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
         <br/>
