--- a/index.html
+++ b/index.html
@@ -40,14 +40,11 @@
         • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler</a><br/>
         • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a><br/>
         <br/>
-        Games:
-        <br/>
-        • <a href="https://github.com/maierfelix/space-shooter">Space shooter (much boom-boom)</a><br/>
-        <br/>
-        Pokemon related:
+        Game related:
         <br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
+        • <a href="https://github.com/maierfelix/space-shooter">Space shooter (much boom-boom)</a><br/>
         <br/>
         Experiments:
         <br/>
@@ -69,7 +66,8 @@
         Links:
         <br/>
         <a href="https://github.com/maierfelix">Github</a>,
-        <a href="https://medium.com/@xilefmai">Medium</a>
+        <a href="https://medium.com/@xilefmai">Medium</a>,
+        <a href="https://www.linkedin.com/in/felix-maier-726ba4135">LinkedIn</a>
         <br/>
         <br/>
       </center>
