--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="Felix Maier">
     <meta name="author" content="Felix Maier">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
 
+    <!-- Lay back and snort a good dose of this painful html shit below -->
     <div>
       <br/>
       <br/>
@@ -79,7 +79,68 @@
       <br/>
     </div>
 
+    <!-- css inside html, congratzz -->
+    <style>
+      @font-face {
+        margin: 0;
+        font-family: Courier New, monospace;
+        font-size: 0.75em;
+        letter-spacing: 1px;
+        line-height: 18px;
+        color: #b7bab3;
+        background: #353631;
+      }
+      html {
+        overflow-y: scroll;
+        font-size: 100%;
+        -webkit-overflow-scrolling: touch;
+        -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+      }
+      body {
+        margin: 0;
+        font-family: "Dosis-Light", Courier New, monospace;
+        font-size: 14px;
+        letter-spacing: 1px;
+        line-height: 18px;
+        color: #b7bab3;
+        background: #353631;
+      }
+      html::-webkit-scrollbar {
+        width: 0px;
+      }
+      a {
+        color: #bfc2bb;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #717171;
+      }
+    </style>
+
     <script type="text/javascript" src="js/main.js" async></script>
 
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- nothing better to do, huh? -->
