--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <br/>
       <center>
         I'm 20 years old and currently live in Tübingen, Germany.<br/>
-        If you have any questions feel free to write me a <a href="mailto:xilefmai@gmail.com">mail</a> <l style="color:#efe700;">:-)</l>
+        If you have any questions feel free to write me a <a href="mailto:xilefmai@gmail.com" style="padding-right: 4px;">mail</a>🦄
       </center>
     </div>
 
@@ -81,15 +81,6 @@
 
     <!-- css inside html, congratzz -->
     <style>
-      @font-face {
-        margin: 0;
-        font-family: Courier New, monospace;
-        font-size: 0.75em;
-        letter-spacing: 1px;
-        line-height: 18px;
-        color: #b7bab3;
-        background: #353631;
-      }
       html {
         overflow-y: scroll;
         font-size: 100%;
@@ -110,7 +101,7 @@
         width: 0px;
       }
       a {
-        color: #bfc2bb;
+        color: #ffffff;
         text-decoration: none;
       }
       a:hover {
