--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
       <br/>
       <center>
         Hi there!
-        <br/>
-        I'm Felix Maier
       </center>
     </div>
 
@@ -24,8 +22,8 @@
       <br/>
       <br/>
       <center>
-        I'm 20 years old and currently live in Tübingen, Germany.<br/>
-        If you have any questions feel free to write me a <a href="mailto:xilefmai@gmail.com" style="padding-right: 4px;">mail</a>🦄
+        I'm Felix Maier, 21 years old and currently live in Tübingen, Germany.<br/>
+        If you have any questions then feel free to write me a <a href="mailto:xilefmai@gmail.com" style="padding-right: 4px;">mail</a>🦄
       </center>
     </div>
 
@@ -35,9 +33,10 @@
       <center>
         Compiler related:
         <br/>
+        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a><br/>
+        • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler in 1k LOC</a><br/>
         • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a><br/>
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
-        • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler</a><br/>
         • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a><br/>
         <br/>
         Game related:
@@ -46,10 +45,15 @@
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter (much boom-boom)</a><br/>
         <br/>
+        Other projects:
+        <br/>
+        • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a><br/>
+        <br/>
         Experiments:
         <br/>
         • <a href="https://github.com/maierfelix/txt2png">Storing ascii inside png's</a><br/>
         • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
+        • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
         <br/>
         Older projects:
