--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
 
-    <!-- Lay back and snort a good dose of this painful html shit below -->
     <div>
       <br/>
       <br/>
@@ -51,7 +50,7 @@
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/txt2png">Storing ascii inside png's</a><br/>
+        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside pngs</a><br/>
         • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
@@ -83,7 +82,6 @@
       <br/>
     </div>
 
-    <!-- css inside html, congratzz -->
     <style>
       html {
         overflow-y: scroll;
@@ -117,25 +115,3 @@
 
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- nothing better to do, huh? -->
