--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br/>
       <br/>
       <center>
-        I'm Felix Maier, 21 years old and currently live in Tübingen, Germany.<br/>
+        I'm Felix Maier and currently live in Tübingen, Germany.<br/>
         If you have any questions then feel free to write me a <a href="mailto:xilefmai@gmail.com" style="padding-right: 4px;">mail</a>🦄
       </center>
     </div>
