Remove shit crap

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <br/>
       <center>
         I'm Felix Maier and currently live in Tübingen, Germany.<br/>
-        If you have any questions then feel free to write me a <a href="mailto:xilefmai@gmail.com" style="padding-right: 4px;">mail</a>🦄
       </center>
     </div>
 
@@ -42,7 +41,7 @@
         <br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
-        • <a href="https://github.com/maierfelix/space-shooter">Space shooter (much boom-boom)</a><br/>
+        • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a><br/>
         <br/>
         Other projects:
         <br/>
@@ -50,7 +49,7 @@
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside pngs</a><br/>
+        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a><br/>
         • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
@@ -71,6 +70,7 @@
         <a href="https://github.com/maierfelix">Github</a>,
         <a href="https://medium.com/@xilefmai">Medium</a>,
         <a href="https://www.linkedin.com/in/felix-maier-726ba4135">LinkedIn</a>
+        <a href="mailto:xilefmai@gmail.com">Email</a>
         <br/>
         <br/>
       </center>
