--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
         • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a><br/>
         <br/>
+        Research related:
+        <br/>
+        • <a href="https://github.com/maierfelix/Iroh">Dynamic Code Flow Analysis</a><br/>
         Game related:
         <br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a><br/>
-        <br/>
-        Other projects:
-        <br/>
         • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a><br/>
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a><br/>
-        • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
+        • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a><br/>
+        • <a href="https://github.com/maierfelix/wasm-src2game">Turning a runtime control flow into a Game</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
+        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a><br/>
+        • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
         <br/>
         Older projects:
         <br/>
