--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         Research related:
         <br/>
         • <a href="https://github.com/maierfelix/Iroh">Dynamic Code Flow Analysis</a><br/>
+        <br/>
         Game related:
         <br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
@@ -50,7 +51,7 @@
         Experiments:
         <br/>
         • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a><br/>
-        • <a href="https://github.com/maierfelix/wasm-src2game">Turning a runtime control flow into a Game</a><br/>
+        • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
         • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a><br/>
