--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <br/>
         • <a href="https://github.com/maierfelix/Iroh">Dynamic Code Flow Analysis</a><br/>
         <br/>
+        ROM Hacking related:
+        <br/>
+        • <a href="https://maierfelix.github.io/emerald-engine/static/">Pokemon Emerald ROM Experiment</a><br/>
+        <br/>
         Game related:
         <br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
