--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br/>
         ROM Hacking related:
         <br/>
-        • <a href="https://maierfelix.github.io/emerald-engine/static/">Pokemon Emerald ROM Experiment</a><br/>
+        • <a href="https://github.com/maierfelix/pokemon-emerald-rom-hacking">Pokemon Emerald ROM Hacking Kit</a><br/>
         <br/>
         Game related:
         <br/>
