--- a/index.html
+++ b/index.html
@@ -107,15 +107,27 @@
         color: #b7bab3;
         background: #353631;
       }
-      html::-webkit-scrollbar {
-        width: 0px;
-      }
       a {
         color: #ffffff;
         text-decoration: none;
       }
       a:hover {
         color: #717171;
+      }
+      ::-webkit-scrollbar {
+        width: 12px;
+      }
+      ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 1px;
+        border-radius: 1px;
+        -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.35);
+        background: rgba(255,255,255,0.55); 
+      }
+      ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+        background: rgba(0,0,0,0.25); 
+        -webkit-border-radius: 1px;
+        border-radius: 1px;
       }
     </style>
 
