--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <br/>
         <a href="https://github.com/maierfelix">Github</a>,
         <a href="https://medium.com/@xilefmai">Medium</a>,
-        <a href="https://twitter.com/felixmaier96">Twitter</a>,
+        <a href="https://xilefmai.deviantart.com/">DeviantArt</a>,
         <a href="https://www.linkedin.com/in/felix-maier-726ba4135">LinkedIn</a>,
         <a href="mailto:xilefmai@gmail.com">Email</a>
         <br/>
