--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <br/>
         Game related:
         <br/>
+        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A professional Map Editor (Closed source)</a><br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a><br/>
