--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <br/>
         Game related:
         <br/>
-        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A professional Map Editor (Closed source)</a><br/>
+        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor (Closed source)</a><br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a><br/>
@@ -55,6 +55,7 @@
         <br/>
         Experiments:
         <br/>
+        • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a><br/>
         • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a><br/>
         • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
