--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
       <br/>
       <br/>
       <center>
+        WebAssembly related:
+        <br/>
+        • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a><br/>
+        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a><br/>
+        • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a><br/>
         Compiler related:
         <br/>
-        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a><br/>
         • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler in 1k LOC</a><br/>
         • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a><br/>
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
@@ -55,7 +59,6 @@
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a><br/>
         • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a><br/>
         • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
