--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br/>
       <br/>
       <center>
-        I'm Felix Maier, 21 years old and currently live in Tübingen, Germany. <br/>
+        I'm Felix Maier and currently live in Tübingen, Germany. <br/>
       </center>
     </div>
 
@@ -29,11 +29,16 @@
       <br/>
       <br/>
       <center>
+        Vulkan related:
+        <br/>
+        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan bindings for node.js</a><br/>
+        <br/>
         WebAssembly related:
         <br/>
         • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a><br/>
         • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a><br/>
         • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a><br/>
+        • <a href="https://github.com/maierfelix/tolw">WebAssembly port of tinyobjloader</a><br/>
         <br/>
         Compiler related:
         <br/>
@@ -61,6 +66,7 @@
         Experiments:
         <br/>
         • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a><br/>
+        • <a href="https://github.com/maierfelix/3d-code-vizard">Visualizing runtime code behaviour in a 3D environment</a><br/>
         • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
         • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
@@ -81,7 +87,6 @@
         Links:
         <br/>
         <a href="https://github.com/maierfelix">Github</a>,
-        <a href="https://medium.com/@xilefmai">Medium</a>,
         <a href="https://xilefmai.deviantart.com/">DeviantArt</a>,
         <a href="https://www.linkedin.com/in/felix-maier-726ba4135">LinkedIn</a>,
         <a href="mailto:xilefmai@gmail.com">Email</a>
