--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <center>
         Vulkan related:
         <br/>
-        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan bindings for node.js</a><br/>
+        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a><br/>
         <br/>
         WebAssembly related:
         <br/>
