--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <br/>
         • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a><br/>
         <br/>
+        VR related:
+        <br/>
+        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a><br/>
+        <br/>
         WebAssembly related:
         <br/>
         • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a><br/>
