--- a/index.html
+++ b/index.html
@@ -31,56 +31,60 @@
       <center>
         Vulkan related:
         <br/>
-        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a><br/>
+        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a> <code lang="c++"></code> <code lang="js"></code> <br/>
         <br/>
         VR related:
         <br/>
-        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a><br/>
+        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a> <code lang="js"></code><br/>
         <br/>
         WebAssembly related:
         <br/>
-        • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a><br/>
-        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a><br/>
-        • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a><br/>
-        • <a href="https://github.com/maierfelix/tolw">WebAssembly port of tinyobjloader</a><br/>
+        • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="wasm"></code> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a> <code lang="wasm"></code> <code lang="c"></code><br/>
+        • <a href="https://github.com/maierfelix/tolw">WebAssembly port of tinyobjloader</a> <code lang="c++"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
         <br/>
         Compiler related:
         <br/>
-        • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler in 1k LOC</a><br/>
-        • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a><br/>
-        • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a><br/>
-        • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a><br/>
+        • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler in 1k LOC</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a> <code lang="js"></code> <code lang="swift"></code><br/>
+        • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a> <code lang="js"></code><br/>
         <br/>
         Research related:
         <br/>
-        • <a href="https://github.com/maierfelix/Iroh">Dynamic Code Flow Analysis</a><br/>
+        • <a href="https://github.com/maierfelix/Iroh">Dynamic Code Flow Analysis</a> <code lang="js"></code><br/>
         <br/>
         ROM Hacking related:
         <br/>
-        • <a href="https://github.com/maierfelix/pokemon-emerald-rom-hacking">Pokemon Emerald ROM Hacking Kit</a><br/>
+        • <a href="https://github.com/maierfelix/pokemon-emerald-rom-hacking">Pokemon Emerald ROM Hacking Kit</a> <code lang="js"></code><br/>
         <br/>
         Game related:
         <br/>
-        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor (Closed source)</a><br/>
-        • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a><br/>
-        • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a><br/>
-        • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a><br/>
-        • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a><br/>
+        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a> <code lang="js"></code><br/>
+        <br/>
+        Minecraft related:
+        <br/>
+        • <a href="https://github.com/maierfelix/mc-spawner-upgrade">Mob Spawner Upgrade</a> <code lang="java"></code><br/>
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a><br/>
-        • <a href="https://github.com/maierfelix/3d-code-vizard">Visualizing runtime code behaviour in a 3D environment</a><br/>
-        • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a><br/>
-        • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a><br/>
-        • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a><br/>
-        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a><br/>
-        • <a href="https://github.com/maierfelix/music-box">Programmable music box</a><br/>
+        • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a> <code lang="c"></code> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/3d-code-vizard">Visualizing runtime code behaviour in a 3D environment</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/music-box">Programmable music box</a> <code lang="js"></code><br/>
         <br/>
         Older projects:
         <br/>
-        • <a href="https://github.com/maierfelix/lamella">Flow based visual programming</a><br/>
-        • <a href="https://github.com/maierfelix/calc">Browserbased multiplayer table calculation</a><br/>
+        • <a href="https://github.com/maierfelix/lamella">Flow based visual programming</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/calc">Browserbased multiplayer table calculation</a> <code lang="js"></code><br/>
       </center>
     </div>
 
@@ -115,10 +119,10 @@
       }
       body {
         margin: 0;
-        font-family: "Dosis-Light", Courier New, monospace;
-        font-size: 12px;
+        font-family: Roboto,-apple-system,BlinkMacSystemFont,"Helvetica Neue","Segoe UI","Oxygen","Ubuntu","Cantarell","Open Sans",sans-serif;
+        font-size: 14px;
         letter-spacing: 1px;
-        line-height: 18px;
+        line-height: 21px;
         color: #b7bab3;
         background: #353631;
       }
@@ -143,6 +147,39 @@
         background: rgba(0,0,0,0.25); 
         -webkit-border-radius: 1px;
         border-radius: 1px;
+      }
+      code {
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-left: 6px;
+        padding-right: 6px;
+        background: rgba(255,255,255,0.15);
+        font-weight: 800;
+        font-size: 12px;
+      }
+      code[lang="c++"]:before {
+        content: "C++";
+        color: rgb(243, 75, 125);
+      }
+      code[lang="js"]:before {
+        content: "JS";
+        color: rgb(241, 224, 90);
+      }
+      code[lang="c"]:before {
+        content: "C";
+        color: rgb(158, 158, 158);
+      }
+      code[lang="wasm"]:before {
+        content: "WASM";
+        color: rgb(4, 19, 59);
+      }
+      code[lang="swift"]:before {
+        content: "Swift";
+        color: rgb(255, 172, 69);
+      }
+      code[lang="java"]:before {
+        content: "Java";
+        color: rgb(176, 114, 25);
       }
     </style>
 
