--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
       <center>
         Vulkan related:
         <br/>
-        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a> <code lang="c++"></code> <code lang="js"></code> <br/>
+        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
-        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         <br/>
         WebAssembly related:
         <br/>
-        • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="wasm"></code> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a> <code lang="wasm"></code> <code lang="c"></code><br/>
         • <a href="https://github.com/maierfelix/tolw">WebAssembly port of tinyobjloader</a> <code lang="c++"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
@@ -61,11 +61,11 @@
         <br/>
         Game related:
         <br/>
-        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a> <code lang="js"></code><br/>
+        • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code> <code lang="webgl"></code><br/>
+        • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         <br/>
         Minecraft related:
         <br/>
@@ -73,7 +73,7 @@
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a> <code lang="c"></code> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a> <code lang="c"></code> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/3d-code-vizard">Visualizing runtime code behaviour in a 3D environment</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a> <code lang="js"></code><br/>
@@ -180,6 +180,14 @@
       code[lang="java"]:before {
         content: "Java";
         color: rgb(176, 114, 25);
+      }
+      code[lang="webgl"]:before {
+        content: "WebGL";
+        color: rgb(195, 54, 60);
+      }
+      code[lang="vulkan"]:before {
+        content: "Vulkan";
+        color: rgb(195, 54, 60);
       }
     </style>
 
