--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <center>
         Vulkan related:
         <br/>
-        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan rendering API for node.js</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
-        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
+        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a> <code lang="js"></code> <code lang="webgl"></code> <code lang="webxr"></code><br/>
         <br/>
         WebAssembly related:
         <br/>
         • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a> <code lang="js"></code> <code lang="webgl"></code><br/>
-        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="wasm"></code> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="c"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a> <code lang="wasm"></code> <code lang="c"></code><br/>
         • <a href="https://github.com/maierfelix/tolw">WebAssembly port of tinyobjloader</a> <code lang="c++"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
         <br/>
@@ -184,6 +184,10 @@
       code[lang="webgl"]:before {
         content: "WebGL";
         color: rgb(195, 54, 60);
+      }
+      code[lang="webxr"]:before {
+        content: "WebXR";
+        color: rgb(86, 225, 228);
       }
       code[lang="vulkan"]:before {
         content: "Vulkan";
