--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br/>
       <br/>
       <center>
-        I'm Felix Maier and currently live in Tübingen, Germany. <br/>
+        I'm Felix Maier and currently live in Heidelberg, Germany. <br/>
       </center>
     </div>
 
