--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
         WebAssembly related:
         <br/>
         • <a href="https://github.com/maierfelix/rokon">3D engine using WebGL2, WebAssembly</a> <code lang="js"></code> <code lang="webgl"></code><br/>
-        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="c"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/glmw">WebAssembly powered Matrix and Vector library</a> <code lang="wasm"></code> <code lang="c"></code><br/>
         • <a href="https://github.com/maierfelix/tolw">WebAssembly port of tinyobjloader</a> <code lang="c++"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
         <br/>
         Compiler related:
         <br/>
+        • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="c"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler in 1k LOC</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a> <code lang="js"></code><br/>
+        <br/>
+        Parser related:
+        <br/>
         • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a> <code lang="js"></code> <code lang="swift"></code><br/>
         • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a> <code lang="js"></code><br/>
         <br/>
