--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <br/>
         VR related:
         <br/>
-        • <a href="https://github.com/maierfelix/xr-engine">First attempt of creating a WebXR based VR engine</a> <code lang="js"></code> <code lang="webgl"></code> <code lang="webxr"></code><br/>
+        • <a href="https://github.com/maierfelix/xr-engine">A WebXR based VR 3D engine</a> <code lang="js"></code> <code lang="webgl"></code> <code lang="webxr"></code><br/>
         <br/>
         WebAssembly related:
         <br/>
@@ -46,13 +46,13 @@
         Compiler related:
         <br/>
         • <a href="https://github.com/maierfelix/mini-c">A C to WebAssembly compiler</a> <code lang="c"></code> <code lang="wasm"></code> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/mini-js">A minimal self-hosted js compiler in 1k LOC</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/mini-js">A Self-Compiling JavaScript Compiler in 1k LOC</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/hevia-compiler">Compiler providing a Swift like language</a> <code lang="js"></code><br/>
         <br/>
         Parser related:
         <br/>
-        • <a href="https://github.com/maierfelix/hevia-parser">A parser for Apple's Swift language</a> <code lang="js"></code> <code lang="swift"></code><br/>
-        • <a href="https://github.com/maierfelix/htmlparse">A fast html parser</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/hevia-parser">A Parser for Apple's Swift Language</a> <code lang="js"></code> <code lang="swift"></code><br/>
+        • <a href="https://github.com/maierfelix/htmlparse">A fast HTML Parser</a> <code lang="js"></code><br/>
         <br/>
         Research related:
         <br/>
@@ -65,8 +65,8 @@
         Game related:
         <br/>
         • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code> <code lang="webgl"></code><br/>
-        • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
-        • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO server emulator</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon Engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
+        • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO Server Emulator</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         <br/>
@@ -76,18 +76,18 @@
         <br/>
         Experiments:
         <br/>
-        • <a href="https://github.com/maierfelix/wasm-particles">Particle system using WASM and WebGL</a> <code lang="c"></code> <code lang="js"></code> <code lang="webgl"></code><br/>
-        • <a href="https://github.com/maierfelix/3d-code-vizard">Visualizing runtime code behaviour in a 3D environment</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/src2game">Turning a runtime control flow into a Game</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming canvas over websockets</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/html-canvas">Rendering html into canvas</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/music-box">Programmable music box</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/wasm-particles">Particle System using WASM and WebGL</a> <code lang="c"></code> <code lang="js"></code> <code lang="webgl"></code><br/>
+        • <a href="https://github.com/maierfelix/3d-code-vizard">Visualizing Runtime Code-Behaviour inside a 3D environment</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/src2game">Turning a Runtime Control-Flow into a Game</a> <code lang="js"></code><br/>
         <br/>
         Older projects:
         <br/>
-        • <a href="https://github.com/maierfelix/lamella">Flow based visual programming</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/calc">Browserbased multiplayer table calculation</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/lamella">Flow-based Visual Programming</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/calc">Multiplayer Spreadsheet</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/canvas-live-stream">Live streaming Canvas over Websockets</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/html-canvas">Rendering HTML inside a Canvas</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/txt2png">Storing ASCII inside PNGs</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/music-box">Programmable Music Box</a> <code lang="js"></code><br/>
       </center>
     </div>
 
