--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         • <a href="https://www.youtube.com/watch?v=-COtECNb8lo">A WebGL Pokemon Map Editor</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/pokemmo">WebGL Pokemon Engine</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         • <a href="https://github.com/maierfelix/pogoserver">Pokemon GO Server Emulator</a> <code lang="js"></code><br/>
-        • <a href="https://github.com/maierfelix/space-shooter">Space shooter</a> <code lang="js"></code><br/>
+        • <a href="https://github.com/maierfelix/space-shooter">Space Shooter</a> <code lang="js"></code><br/>
         • <a href="https://github.com/maierfelix/poxi">A flat pixel art editor using low-level matrices</a> <code lang="js"></code> <code lang="webgl"></code><br/>
         <br/>
         Minecraft related:
