--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
         padding-right: 6px;
         background: rgba(255,255,255,0.075);
         font-size: 12px;
+        cursor: text;
+      }
+      code:hover {
+        background: rgba(255,255,255,0.09);
       }
       code[lang="c++"]:before {
         content: "C++";
