--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <center>
         Vulkan related:
         <br/>
-        • <a href="https://github.com/maierfelix/node-vulkan">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/nvk">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/nvk-examples">Vulkan JavaScript API examples</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
