--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Vulkan related:
         <br/>
         • <a href="https://github.com/maierfelix/nvk">Vulkan JavaScript API</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
-        • <a href="https://github.com/maierfelix/nvk-examples">Vulkan JavaScript API examples</a> <code lang="c++"></code> <code lang="js"></code> <code lang="vulkan"></code> <br/>
+        • <a href="https://github.com/maierfelix/nvk-examples">Vulkan JavaScript API examples</a> <code lang="js"></code> <code lang="vulkan"></code> <br/>
         <br/>
         VR related:
         <br/>
